--- a/Eye.vcxproj.filters
+++ b/Eye.vcxproj.filters
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Eye.cpp" />
-    <ClCompile Include="tokenizer.cpp" />
+    <ClCompile Include="compiler\Eye.cpp" />
+    <ClCompile Include="compiler\tokenizer.cpp" />
+    <ClCompile Include="compiler\parser.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="tokenizer.h" />
+    <ClInclude Include="compiler\tokenizer.h" />
+    <ClInclude Include="compiler\parser.h" />
   </ItemGroup>
 </Project>
