--- a/Composer.vcxproj.filters
+++ b/Composer.vcxproj.filters
@@ -3,12 +3,33 @@
   <ItemGroup>
     <ClInclude Include="compiler\expression.h" />
     <ClInclude Include="compiler\matcher.h" />
-    <ClInclude Include="compiler\parser.h" />
+    <ClInclude Include="compiler\parser\parser.h" />
     <ClInclude Include="compiler\tokenizer.h" />
+    <ClInclude Include="compiler\ast\ast.h" />
+    <ClInclude Include="compiler\codegen\codegen.h" />
+    <ClInclude Include="compiler\error.h" />
+    <ClInclude Include="compiler\console_helper.h" />
+    <ClInclude Include="compiler\composer.h" />
+    <ClInclude Include="compiler\ast\statement.h" />
+    <ClInclude Include="compiler\ast\common.h" />
+    <ClInclude Include="compiler\ast\expression.h" />
+    <ClInclude Include="compiler\ast\toplevel.h" />
+    <ClInclude Include="compiler\ast\function.h" />
+    <ClInclude Include="compiler\ast\struct.h" />
+    <ClInclude Include="compiler\ast\enum.h" />
+    <ClInclude Include="compiler\ast\comp.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="compiler\Composer.cpp" />
-    <ClCompile Include="compiler\parser.cpp" />
+    <ClCompile Include="compiler\parser\parser.cpp" />
     <ClCompile Include="compiler\tokenizer.cpp" />
+    <ClCompile Include="compiler\codegen\codegen.cpp" />
+    <ClCompile Include="compiler\parser\function.cpp" />
+    <ClCompile Include="compiler\parser\struct.cpp" />
+    <ClCompile Include="compiler\parser\expression.cpp" />
+    <ClCompile Include="compiler\parser\statement.cpp" />
+    <ClCompile Include="compiler\parser\toplevel.cpp" />
+    <ClCompile Include="compiler\parser\comp.cpp" />
+    <ClCompile Include="compiler\parser\enum.cpp" />
   </ItemGroup>
 </Project>
